# try-building-ffmpeg

./: CMakeLists.txt  README.md  build.sh  configure_ffmpeg.bash  main.cpp
